--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,8 +21,10 @@ services:
       - backend
 
   backend:
-    build: .
+    build: ./server/
     container_name: demolish-backend
+    env_file:
+      - ./server/.env
     ports:
       - "3000:3000"
       - "4000:4000"
@@ -33,12 +35,24 @@ services:
     networks:
       - backend
 
-  # net:
-  #   image: cloudflare/cloudflared:latest
-  #   container_name: cloud
-  #   networks: 
-  #     - backend
-  #   env_file: .env
-  #   command: tunnel run
-  #   environment:
-  #     - TUNNEL_TOKEN=$TUNNEL_TOKEN
+  frontend:
+    build: ./frontend/
+    container_name: demolish-frontend
+    ports:
+      - "5173:5173"
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
+    depends_on:
+      - backend
+    networks:
+      - backend
+
+  net:
+    image: cloudflare/cloudflared:latest
+    container_name: cloud
+    networks: 
+      - backend
+    env_file: .env
+    command: tunnel run
+    environment:
+      - TUNNEL_TOKEN=$TUNNEL_TOKEN
